@startuml
title Client GUI Class Diagram (Current)

class MainWindow {
    - m_productTypesModel: ProductTypesModel
    - m_productTypesViewModel: ProductTypesViewModel
    - m_productTypesView: ProductTypesView
    - m_usersManagementModel: UsersManagementModel
    - m_usersManagementViewModel: UsersManagementViewModel
    - m_usersView: UsersView
    + startUiProcess()
}

class DialogManager {
    + init()
    + showLoginDialog()
    + showErrorDialog(msg)
}

class LoginDialog
class RegistrationDialog

class UsersManagementModel {
    + fetchUsers()
    + addUser(user)
    + editUser(user)
    + deleteUser(id)
    + fetchRoles()
}

class UsersManagementViewModel {
    + users(): QVector<DisplayData::User>
    + roles(): QVector<DisplayData::Role>
}

class UsersView {
    + fillTable(users)
}

class ProductTypesModel {
    + fetchProductTypes()
    + createProductType(productType)
    + editProductType(productType)
    + deleteProductType(id)
}

class ProductTypesViewModel {
    + productTypes(): QVector<DisplayData::ProductType>
}

class ProductTypesView {
    + fillTable(productTypes)
}

class ApiManager {
    + loginUser(username, password)
    + getUsers()
    + addUser(user)
    + editUser(user)
    + getRoleList()
    + getProductTypes()
    + createProductType(productType)
    + editProductType(productType)
    + deleteProductType(id)
}

MainWindow --> DialogManager
MainWindow --> ProductTypesModel
MainWindow --> ProductTypesViewModel
MainWindow --> ProductTypesView
MainWindow --> UsersManagementModel
MainWindow --> UsersManagementViewModel
MainWindow --> UsersView
ProductTypesModel --> ApiManager
ProductTypesModel --> ProductTypesViewModel
ProductTypesViewModel --> ProductTypesView
UsersManagementModel --> ApiManager
UsersManagementModel --> UsersManagementViewModel
UsersManagementViewModel --> UsersView
DialogManager --> LoginDialog
DialogManager --> RegistrationDialog

@enduml
